src/objects/Vessel__c.object
<CustomObject>
    <fields>
        <fullName>Deadweight__c</fullName>
        <inlineHelpText>Deadweight of the vessel measured in tonnes</inlineHelpText>
        <label>Deadweight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lenght__c</fullName>
        <label>Lenght</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vessel_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vessel owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Vessel Owner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vessels</relationshipLabel>
        <relationshipName>Vessels_owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>max_TEU__c</fullName>
        <inlineHelpText>maximum TEU of the vessel</inlineHelpText>
        <label>max TEU</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>year_of_build__c</fullName>
        <label>year of build</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vessel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vessels</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>